.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:26:03 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
lib/tlistaporo.cpp: In member function ‘bool TListaPoro::Insertar(TPoro&)’:
lib/tlistaporo.cpp:217:7: error: cannot convert ‘TListaNodo**’ to ‘TListaNodo*’ in assignment
   aux0=&nodo;
       ^
Makefile:12: recipe for target 'lib/tlistaporo.o' failed
make: *** [lib/tlistaporo.o] Error 1
14:26:09 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
lib/tlistaporo.cpp: In member function ‘bool TListaPoro::Insertar(TPoro&)’:
lib/tlistaporo.cpp:217:7: error: cannot convert ‘TListaNodo**’ to ‘TListaNodo*’ in assignment
   aux0=&nodo;
Makefile:12: recipe for target 'lib/tlistaporo.o' failed
       ^
make: *** [lib/tlistaporo.o] Error 1
14:26:31 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
lib/tlistaporo.cpp: In member function ‘bool TListaPoro::Insertar(TPoro&)’:
lib/tlistaporo.cpp:217:7: error: cannot convert ‘TListaNodo**’ to ‘TListaNodo*’ in assignment
   aux0=&nodo;
       ^
Makefile:12: recipe for target 'lib/tlistaporo.o' failed
make: *** [lib/tlistaporo.o] Error 1
14:26:57 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
14:27:28 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
src/tad.cpp: In function ‘int main()’:
src/tad.cpp:15:11: error: ‘b’ was not declared in this scope
   cout << b.Longitud() << endl;
           ^
Makefile:10: recipe for target 'tad' failed
src/tad.cpp:16:11: error: ‘c’ was not declared in this scope
   cout << c.Longitud() << endl;
           ^
make: *** [tad] Error 1
14:27:52 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
14:28:31 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:29:49 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:30:30 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
14:31:19 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:37:04 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tporo.o lib/tporo.cpp
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
14:38:24 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:42:26 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:46:09 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:47:15 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:51:05 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
14:53:56 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
14:54:23 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
16:02:36 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
16:06:58 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
16:13:56 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
16:17:33 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
16:30:16 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
16:36:26 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
16:38:56 **** Incremental Build of configuration Default for project poros-master ****
make all 
make: Nothing to be done for 'all'.
16:44:46 **** Incremental Build of configuration Default for project poros-master ****
make all 
g++ -g  -c -Iinclude -o lib/tlistaporo.o lib/tlistaporo.cpp
g++ -g  -Iinclude src/tad.cpp lib/tporo.o lib/tvectorporo.o lib/tlistaporo.o -o tad
